css/css-transforms/animation/transform-interpolation-005.html has failures
https://bugs.webkit.org/show_bug.cgi?id=235806
Summary css/css-transforms/animation/transform-interpolation-005.html has failures
Antoine Quint
Reported 2022-01-28 07:38:48 PST
css/css-transforms/animation/transform-interpolation-005.html has 24 failures, we need to investigate and fix them.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-02-04 07:41:39 PST
Matt Woodrow
Comment 2 2023-08-15 23:26:09 PDT
Note You need to log in before you can comment on or make changes to this bug.