Decomposition of 2d transform matrices doesn't follow the suggested algorithm and fails css/css-transforms/animation/transform-interpolation-005.html. https://bugs.webkit.org/show_bug.cgi?id=235806 <rdar://88488559>

Reviewed by NOBODY (OOPS!).

The updated algorithm has been proposed in an issue for years, and taken up both both other engines and WPTs.
We should use it, and hopefully get the changes added to the actual spec.

https://github.com/w3c/csswg-drafts/issues/3713

* LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/animation/transform-interpolation-005-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/animation/transform-skew-composition-expected.txt:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::computeTransformedExtentViaTransformList const):
(WebCore::KeyframeEffect::computeTransformedExtentViaMatrix const):
* Source/WebCore/platform/graphics/transforms/TransformationMatrix.cpp:
(WebCore::decompose2):
(WebCore::interpolateQuaternion):
(WebCore::TransformationMatrix::blend2):
(WebCore::TransformationMatrix::decompose2 const):
(WebCore::TransformationMatrix::recompose2):
* Source/WebCore/platform/graphics/transforms/TransformationMatrix.h:
(WebCore::TransformationMatrix::Decomposed2Type::operator== const):
(WebCore::TransformationMatrix::Decomposed2Type::hasRotation):